--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           name: Build
           path: build
+          unityVersion: 2021.3.8f1
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.1
