--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           customImage: "unityci/editor:2021.3.8f1-webgl-1"
+          customParameters: "-nographics"
 
       # Output
       - uses: actions/upload-artifact@v2
