--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           customImage: "unityci/editor:ubuntu-2021.3.8f1-webgl-1.0.1"
-          customParameters: "-nographics"
+          customParameters: "-nographics -UncompressedAssetBundle"
           targetPlatform: WebGL
 
       # Output
