--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
+          buildMethod: UnityBuilderAction.BuildScript.Build
           customImage: "unityci/editor:ubuntu-2021.3.8f1-webgl-1.0.1"
           customParameters: "-nographics -UncompressedAssetBundle"
           targetPlatform: WebGL
