Only do things on master

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: Actions 😎
 
-target: master
-on: [push]
-
+on:
+  push:
+    branches:
+      - "master"
 jobs:
   build:
     name: Build my project ✨
